cambios en presentación
agregar cliente ya válida los datos que ingrese el usuario, además de que ya agregué el frame para actualizar y la búsqueda dinámica en la pantalla de clientes.